--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ future: true
 # SNS settings
 RSS: false
 #weibo_username:     none
-zhihu_username:     foundac
+zhihu_username:     guo-yao-89
 github_username:    edgeOB
 #twitter_username:   none
 #facebook_username:  huxpro
